<resources>
    <string name="app_name">My Application</string>
    <string name="matrix_button_text1">3x3 matrix</string>
    <string name="matrix_button_text2">5x5 matrix</string>
    <string name="title">Welcome to my first Card Game</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password">password</string>
    <string name="email_address">email address</string>
    <string name="button">Login</string>
</resources>