<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Button1"
        android:layout_width="194dp"
        android:layout_height="58dp"

        android:layout_marginStart="108dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="141dp"
        android:text="@string/matrix_button_text2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="194dp"
        android:layout_height="58dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="454dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="219dp"
        android:text="@string/matrix_button_text1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="346dp"
        android:layout_height="94dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="602dp"
        android:text="@string/title"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="306dp"
        android:layout_height="72dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="384dp"
        android:layout_marginBottom="302dp"
        android:text="Select the size of the card matrix you would like to use"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>